--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -32,19 +32,20 @@
       "====== WebDriver manager ======\n",
       "Current google-chrome version is 100.0.4896\n",
       "Get LATEST chromedriver version for 100.0.4896 google-chrome\n",
-      "Trying to download new driver from https://chromedriver.storage.googleapis.com/100.0.4896.60/chromedriver_win32.zip\n",
-      "Driver has been saved in cache [C:\\Users\\radgu\\.wdm\\drivers\\chromedriver\\win32\\100.0.4896.60]\n"
+      "Driver [C:\\Users\\radgu\\.wdm\\drivers\\chromedriver\\win32\\100.0.4896.60\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
    "source": [
     "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
-    "browser = Browser('chrome', **executable_path, headless=False)"
+    "browser = Browser('chrome', **executable_path, headless=False)\n",
+    "\n",
+    "mars_data = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,20 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"The clean room at NASA's Jet Propulsion Laboratory was open to the media to see NASA's next Mars explorer before it leaves for Florida in preparation for a summertime launch.\""
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### NASA Mars News\n",
     "\n",
@@ -82,25 +72,18 @@
     "news_p=soup.find_all('div', class_='article_teaser_body')[0].text\n",
     "\n",
     "news_title\n",
-    "news_p"
+    "news_p\n",
+    "\n",
+    "#add new title and paragraph to dictionary\n",
+    "mars_data['news_title'] = news_title\n",
+    "mars_data['news_p'] = news_p"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### JPL Mars Space Images - Featured Image\n",
     "jpl_url=\"https://spaceimages-mars.com\"\n",
@@ -118,12 +101,15 @@
     "\n",
     "featured_image_url=jpl_url+ \"/\" + image_url\n",
     "\n",
-    "featured_image_url"
+    "featured_image_url\n",
+    "\n",
+    " #add featured image url to dictionary\n",
+    "mars_data['featured_image_url'] = featured_image_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +182,7 @@
        "4       Distance from Sun:   227,943,824 km   149,598,262 km"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -240,10 +226,12 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Value</th>\n",
+       "      <th>Mars</th>\n",
+       "      <th>Earth</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Stat</th>\n",
+       "      <th>Description</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -251,53 +239,57 @@
        "    <tr>\n",
        "      <th>Diameter:</th>\n",
        "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Mass:</th>\n",
        "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Moons:</th>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Distance from Sun:</th>\n",
        "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Length of Year:</th>\n",
        "      <td>687 Earth days</td>\n",
+       "      <td>365.24 days</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Temperature:</th>\n",
        "      <td>-87 to -5 °C</td>\n",
+       "      <td>-88 to 58°C</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              Value\n",
-       "Stat                               \n",
-       "Diameter:                  6,779 km\n",
-       "Mass:               6.39 × 10^23 kg\n",
-       "Moons:                            2\n",
-       "Distance from Sun:   227,943,824 km\n",
-       "Length of Year:      687 Earth days\n",
-       "Temperature:           -87 to -5 °C"
+       "                               Mars            Earth\n",
+       "Description                                         \n",
+       "Diameter:                  6,779 km        12,742 km\n",
+       "Mass:               6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "Moons:                            2                1\n",
+       "Distance from Sun:   227,943,824 km   149,598,262 km\n",
+       "Length of Year:      687 Earth days      365.24 days\n",
+       "Temperature:           -87 to -5 °C      -88 to 58°C"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#drop single header rows\n",
-    "\n",
     "\n",
     "df.head()\n",
-    "mars_fact=df.rename(columns={0:\"Stat\", 1:\"Value\",2:\"dropme\"},errors=\"raise\")\n",
+    "mars_fact=df.rename(columns={0:\"Description\", 1:\"Mars\",2:\"Earth\"},errors=\"raise\")\n",
     "\n",
     "#df.drop('dropme',axis=1,inplace=True)\n",
     "#mars_fact.set_index(\"Stat\",inplace=True)\n",
@@ -305,11 +297,11 @@
     "mars_fact.columns = mars_fact.columns.get_level_values(0)\n",
     "\n",
     "# remove column \n",
-    "mars_fact = mars_fact.drop(mars_fact.columns[2], axis=1)\n",
+    "#mars_fact = mars_fact.drop(mars_fact.columns[2], axis=1)\n",
     "#drop first row\n",
     "mars_fact = mars_fact.iloc[1:,:]\n",
     "\n",
-    "mars_fact = mars_fact.set_index('Stat')\n",
+    "mars_fact = mars_fact.set_index('Description')\n",
     "\n",
     "mars_fact\n",
     "\n"
@@ -317,29 +309,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 131,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Value</th>\\n    </tr>\\n    <tr>\\n      <th>Stat</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Use to_html method to generate HTML tables from df\n",
     "html_table = mars_fact.to_html()\n",
-    "html_table"
+    "html_table\n",
+    "\n",
+    "#adding to dictionary\n",
+    "mars_data[\"html_table\"] = html_table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,28 +360,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--------------------------------------------------\n",
-      "Cerberus Hemisphere Enhanced\n",
-      "https://marshemispheres.com/images/full.jpg\n",
-      "--------------------------------------------------\n",
-      "Schiaparelli Hemisphere Enhanced\n",
-      "https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg\n",
-      "--------------------------------------------------\n",
-      "Syrtis Major Hemisphere Enhanced\n",
-      "https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg\n",
-      "--------------------------------------------------\n",
-      "Valles Marineris Hemisphere Enhanced\n",
-      "https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg\n"
-     ]
-    }
-   ],
+   "execution_count": 135,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# Loop through each hemisphere item\n",
     "for item in mars_item:\n",
@@ -413,11 +380,6 @@
     "        soup=BeautifulSoup(html,'html.parser')\n",
     "        image_src=soup.find('li').a['href']\n",
     "        image_src=url + image_src\n",
-    "        if (title and image_src):\n",
-    "            # Print results\n",
-    "            print('-'*50)\n",
-    "            print(title)\n",
-    "            print(image_src)\n",
     "        # Create dictionary for title and url\n",
     "        hem_dict={\n",
     "            'title':title,\n",
@@ -430,29 +392,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere_image_urls\n",
+    "\n",
+    "#adding hemisphere_image_urls to dict\n",
+    "mars_data[\"hemisphere_image_urls\"] = hemisphere_image_urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
-       "  'image_url': 'https://marshemispheres.com/images/full.jpg'},\n",
-       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
-       "  'image_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg'},\n",
-       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
-       "  'image_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg'},\n",
-       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
-       "  'image_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}]"
+       "{'news_title': \"A New Video Captures the Science of NASA's Perseverance Mars Rover\",\n",
+       " 'news_p': 'With a targeted launch date of July 30, the next robotic scientist NASA is sending to the to the Red Planet has big ambitions.',\n",
+       " 'featured_image_url': 'https://spaceimages-mars.com/image/featured/mars2.jpg',\n",
+       " 'html_table': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Value</th>\\n    </tr>\\n    <tr>\\n      <th>Stat</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n  </tbody>\\n</table>',\n",
+       " 'hemisphere_image_urls': [{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "   'image_url': 'https://marshemispheres.com/images/full.jpg'},\n",
+       "  {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "   'image_url': 'https://marshemispheres.com/images/schiaparelli_enhanced-full.jpg'},\n",
+       "  {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "   'image_url': 'https://marshemispheres.com/images/syrtis_major_enhanced-full.jpg'},\n",
+       "  {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "   'image_url': 'https://marshemispheres.com/images/valles_marineris_enhanced-full.jpg'}]}"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hemisphere_image_urls"
+    "mars_data"
    ]
   },
   {
